# cloud-memo

./: .gitignore  CLAUDE.md  README.md  fix_cascade_delete.sql  index.html  package.json  recreate_database.sh  tailwind.config.js
.claude/: settings.local.json
docs/: AUTH_SYSTEM_ANALYSIS.md  CLOUD_SYNC.md  DATA_DIRECTORY_CHANGE.md  DELETE_STRATEGY.md  DEVICE_ID_FORMAT.md  FOLDER_DELETE_FIX.md  FRONTEND_INTEGRATION_COMPLETE.md  MULTI_ACCOUNT_DEVICE_MIGRATION.md  NOTE_RESTORE_FEATURE.md  SERVER_DEVICE_RECOGNITION.md  SETTINGS_REFACTOR.md  SYNC_IMPROVEMENTS.md  TABLE_FEATURES_GUIDE.md  TRASH_API_OPTIMIZATION.md
note-sync-server/: .dockerignore  BUILD_CENTOS7.md  Cargo.toml  DATABASE_INIT.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  build-musl.sh  docker-build.sh
note-sync-server/config/: development.toml  production.toml
note-sync-server/frontend/: README.md  package.json
note-sync-server/frontend/src/: App.tsx  index.css  main.tsx
note-sync-server/frontend/src/api/: auth.ts  client.ts  devices.ts  history.ts  sync.ts
note-sync-server/frontend/src/components/: ProtectedRoute.tsx
note-sync-server/frontend/src/components/sync/: AdminPanel.tsx  ConflictResolver.tsx  DeviceManager.tsx  SyncDashboard.tsx  SyncHistory.tsx
note-sync-server/frontend/src/hooks/: useDevice.ts
note-sync-server/frontend/src/lib/: router.tsx
note-sync-server/frontend/src/pages/: Login.tsx  Register.tsx
note-sync-server/frontend/src/store/: authStore.ts  deviceStore.ts  syncStore.ts
note-sync-server/migrations/: 001_create_users.sql  002_create_devices.sql  003_create_notes.sql  004_create_folders.sql  005_create_note_versions.sql  006_create_sync_history.sql  007_create_user_profiles.sql  008_create_refresh_tokens.sql
note-sync-server/sql/: init.sql
note-sync-server/sql/migrations/: 003_architecture_cleanup.sql  007_add_workspace_to_sync_lock.sql
note-sync-server/src/: config.rs  db.rs  error.rs  main.rs  models.rs
note-sync-server/src/handlers/: auth.rs  devices.rs  folders.rs  history.rs  mod.rs  notes.rs  profile.rs  sync.rs  workspaces.rs
note-sync-server/src/middleware/: auth.rs  logging.rs  mod.rs
note-sync-server/src/services/: auth_service.rs  device_identifier_service.rs  device_service.rs  mod.rs  profile_service.rs  sync_history_service.rs  sync_lock_service.rs  token_blacklist.rs  token_service.rs
note-sync-server/test/: test-ua.ps1
src/: App.tsx  index.css  main.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app_settings.rs  auth.rs  editor_settings.rs  folders.rs  keybindings.rs  mod.rs  notes.rs  profile.rs  snapshot.rs  sync.rs  tag.rs  workspaces.rs
src-tauri/src/database/: connection.rs  mod.rs  schema.rs
src-tauri/src/database/config/: mod.rs
src-tauri/src/database/repositories/: editor_settings_repository.rs  folder_repository.rs  keybinding_repository.rs  mod.rs  note_repository.rs  snapshot_repository.rs  tag_repository.rs  user_profile_repository.rs  workspace_repository.rs
src-tauri/src/models/: app_settings.rs  auth.rs  editor_settings.rs  error.rs  folder.rs  keybinding.rs  mod.rs  note.rs  snapshot.rs  sync.rs  tag.rs  user_profile.rs  workspace.rs
src-tauri/src/services/: app_settings_service.rs  auth_service.rs  auto_sync_service.rs  cleanup_service.rs  crypto.rs  device_identifier_service.rs  editor_settings_service.rs  folder_service.rs  keybinding_service.rs  mod.rs  note_service.rs  single_sync_service.rs  snapshot_service.rs  sync_service.rs  sync_service.rs.bak  tag_service.rs  user_profile_service.rs  workspace_service.rs
src/components/: FontSettings.tsx  theme-provider.tsx
src/config/: defaultKeybindings.ts
src/hooks/: useDebounce.ts  useEditorFontSettings.ts
src/lib/: authWindow.ts  exportNote.ts  folderHelpers.ts  globalKeyHandler.ts  keybindingActions.ts  keybindingParser.ts  noteHelpers.ts  searchHelpers.ts  tiptapMarkdown.ts  tiptapSerializer.ts  utils.ts
src/pages/: AllNotes.tsx  Auth.tsx  Editor.tsx  Favorites.tsx  Home.tsx  Profile.tsx  Settings.tsx  Trash.tsx
src/services/: appSettingsApi.ts  authApi.ts  autoSave.ts  editorSettingsApi.ts  folderApi.ts  noteApi.ts  noteStorage.ts  profileApi.ts  snapshotApi.ts  syncApi.ts  tagApi.ts  workspaceApi.ts
src/store/: appSettingsStore.ts  (+14 more)
(+70 files in other folders)
