[package]
name = "note-sync-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# ===== Web 框架 =====
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# ===== 数据库（MySQL） =====
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono"] }

# ===== 序列化 =====
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ===== 认证与加密 =====
jsonwebtoken = "9"
argon2 = "0.5"
sha2 = "0.10"
base64 = "0.22"

# ===== Redis（Token 黑名单） =====
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "aio"] }

# ===== 工具库 =====
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.13"

