[package]
name = "markdown-notes"
version = "0.1.0"
description = "Markdown Notes - A modern note-taking app"
authors = ["shenjianZ"]
edition = "2021"

[lib]
name = "markdown_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.4.0", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"

# 数据库依赖（启用 bundled 特性以内置 SQLite）
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.32.0", features = ["bundled"] }

# 工具库
thiserror = "2.0.18"
chrono = "0.4.43"
anyhow = "1.0.100"
log = "0.4.29"
