[package]
name = "markdown-notes"
version = "0.1.0"
description = "Markdown Notes - A modern note-taking app"
authors = ["shenjianZ"]
edition = "2021"

[lib]
name = "markdown_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.4.0", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"

# 数据库依赖（SQLite）
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.32.0", features = ["bundled"] }

# 工具库
thiserror = "2"
anyhow = "1"
chrono = "0.4"
log = "0.4"

# ===== 云端同步相关依赖 =====
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
aes-gcm = "0.10"
base64 = "0.21"
pbkdf2 = "0.12"
sha2 = "0.10"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread"] }

[features]
# 开发模式特性（用于启用 devtools）
dev = ["tauri/devtools"]
default = []
